...
            android:id="@+id/type_text_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_text" />

        <Button
            android:id="@+id/spinner_selection_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spinner_selection" />

        <Button
            android:id="@+id/custom_list_adapter_button"
...
            android:id="@+id/person_list_adapter_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Person List Adapter" />

        <Button
            android:id="@+id/search_view_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_view" />

        <Button
            android:id="@+id/action_bar_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/actionbar" />

        <Button
            android:id="@+id/viewpager_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpager" />

        <Button
            android:id="@+id/dialogs_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogs" />

        <Button
            android:id="@+id/recycler_view_button"
...
