<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ui.espresso.activities.ActionBarExampleActivity">

    <Button
        android:id="@+id/toggle_action_mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/toogle_actionmode" />

    <TextView
        android:id="@+id/status"
        tools:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_centerInParent="true" />

</RelativeLayout>
